syntax = "proto3";

package pb;

option go_package = './internal/infrastructure/pb';

message GetAuthorByIdRequest {
  string id = 1;
}

message GetAuthorByIdResponse {
  string first_name = 1;
  string last_name = 2;
  string phone_number = 3;
  string email = 4;
}

service AuthorService{
  rpc GetAuthorById(GetAuthorByIdRequest) returns (GetAuthorByIdResponse) {}
}